--- a/_packages/plugins/component-documentation/package.json
+++ b/_packages/plugins/component-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-component-documentation",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "my mathematical plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -17,15 +17,15 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/custom-container": "^0.2.0",
-    "@minipress/markdown": "^0.2.0",
-    "@minipress/utils": "^0.2.0",
+    "@minipress/custom-container": "^0.3.0",
+    "@minipress/markdown": "^0.3.0",
+    "@minipress/utils": "^0.3.0",
     "@vuese/markdown-render": "^2.5.3",
     "@vuese/parser": "^2.4.3",
     "loader-utils": "^1.2.3"
   },
   "devDependencies": {
-    "@minipress/types": "*",
+    "@minipress/types": "^0.3.0",
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0"
   },
