--- a/_packages/plugins/head/package.json
+++ b/_packages/plugins/head/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-head",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {},
@@ -8,8 +8,8 @@
   "author": "",
   "private": false,
   "devDependencies": {
-    "@minipress/head-element": "^0.2.0",
-    "@minipress/types": "*"
+    "@minipress/head-element": "^0.3.0",
+    "@minipress/types": "^0.3.0"
   },
   "publishConfig": {
     "access": "public"
