--- a/_packages/plugins/component-demo/package.json
+++ b/_packages/plugins/component-demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-component-demo",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "my mathematical plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -8,21 +8,20 @@
     "src/**/*.js",
     "src/types.ts"
   ],
-  "scripts": {
-  },
+  "scripts": {},
   "private": false,
   "publishConfig": {
     "access": "public"
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/utils": "^0.4.0",
+    "@minipress/utils": "^0.5.0",
     "fs-extra": "^8.1.0"
   },
   "devDependencies": {
+    "@minipress/types": "^0.5.0",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.0.18",
-    "@minipress/types": "^0.4.0",
     "jest": "^24.9.0"
   }
 }
