--- a/_packages/plugins/component-documentation/package.json
+++ b/_packages/plugins/component-documentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/plugin-component-documentation",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "my mathematical plugin",
   "author": "kienle.christian@icloud.com",
   "license": "MIT",
@@ -17,20 +17,20 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "globby": "^10.0.1",
-    "@minipress/plugin-components": "^0.4.0",
-    "@minipress/custom-container": "^0.4.0",
-    "@minipress/markdown": "^0.4.0",
-    "@minipress/utils": "^0.4.0",
+    "@minipress/custom-container": "^0.5.0",
+    "@minipress/markdown": "^0.5.0",
+    "@minipress/plugin-components": "^0.5.0",
+    "@minipress/utils": "^0.5.0",
     "@vuese/markdown-render": "^2.5.3",
     "@vuese/parser": "^2.4.3",
-    "loader-utils": "^1.2.3",
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "globby": "^10.0.1",
+    "loader-utils": "^1.2.3"
   },
   "devDependencies": {
+    "@minipress/types": "^0.5.0",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.0.18",
-    "@minipress/types": "^0.4.0",
     "jest": "^24.9.0"
   },
   "gitHead": "c14733c38e9095a558c6a329bdce220b8b6bf95d"
