--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@minipress/plugin-components",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "",
   "scripts": {
     "test": "jest --clearCache && jest ."
   },
   "main": "src/index.js",
   "dependencies": {
-    "chokidar": "^3.2.2",
-    "@minipress/utils": "^0.4.0"
+    "@minipress/utils": "^0.5.0",
+    "chokidar": "^3.2.2"
   },
   "devDependencies": {
-    "@minipress/types": "^0.4.0",
-    "jest": "^24.9.0",
-    "@types/jest": "^24.0.19"
+    "@minipress/types": "^0.5.0",
+    "@types/jest": "^24.0.19",
+    "jest": "^24.9.0"
   },
   "private": false,
   "publishConfig": {
