--- a/_packages/plugins/components/package.json
+++ b/_packages/plugins/components/package.json
@@ -7,11 +7,13 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "@minipress/utils": "^0.7.0",
-    "chokidar": "^3.2.2"
+    "fs-extra": "^8.1.0",
+    "@minipress/utils": "^0.7.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
     "@minipress/types": "^0.7.0",
+    "@minipress/test-utils": "^0.7.0",
     "@types/jest": "^24.0.19",
     "jest": "^24.9.0"
   },
